[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Replace module"
edition = "2021"
name = "replace"
version = "1.0.13"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
hex = { workspace = true,  features = ['alloc']  }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Substrate dependencies
sp-core = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
fee = { path = "../fee", default-features = false }
nomination = { path = "../nomination", default-features = false }
oracle = { path = "../oracle", default-features = false }
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }
security = { path = "../security", default-features = false }
stellar-relay = { path = "../stellar-relay", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }

# Orml dependencies
orml-currencies = { workspace = true, optional = true }
orml-traits = { workspace = true, optional = true }

[dev-dependencies]
mocktopus.workspace = true
frame-benchmarking = {workspace = true, default-features = true }
pallet-balances = {workspace = true, default-features = true}
pallet-timestamp = {workspace = true, default-features = true }
sp-arithmetic = {workspace = true, default-features = true }
sp-io = {workspace = true, default-features = true}

# Parachain dependencies
pooled-rewards = { path = "../pooled-rewards" }
staking = { path = "../staking" }
currency = { path = "../currency", features = ["testing-constants"] }
stellar-relay = { path = "../stellar-relay", features = ["testing-utils"] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle", features = ['testing-utils'] }
reward-distribution = { path = "../reward-distribution" }


# Orml dependencies
orml-tokens = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "hex/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "fee/std",
    "nomination/std",
    "oracle/std",
    "security/std",
    "stellar-relay/std",
    "vault-registry/std",
    "primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-traits",
    "orml-currencies",
    "stellar-relay/testing-utils",
    "currency/runtime-benchmarks",
    "currency/testing-constants",
    "security/testing-utils",
    "oracle/testing-utils"
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "currency/try-runtime",
    "fee/try-runtime",
    "nomination/try-runtime",
    "oracle/try-runtime",
    "security/try-runtime",
    "stellar-relay/try-runtime",
    "vault-registry/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
]
