[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Replace module"
edition = "2021"
name = "replace"
version = "1.0.15"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4.3", default-features = false,  features = ['alloc']  }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
fee = { path = "../fee", default-features = false }
nomination = { path = "../nomination", default-features = false }
oracle = { path = "../oracle", default-features = false }
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }
security = { path = "../security", default-features = false }
stellar-relay = { path = "../stellar-relay", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }

# Orml dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false, optional = true }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false, optional = true }

[dev-dependencies]
mocktopus = "0.8.0"
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}

# Parachain dependencies
pooled-rewards = { path = "../pooled-rewards" }
staking = { path = "../staking" }
currency = { path = "../currency", features = ["testing-constants"] }
stellar-relay = { path = "../stellar-relay", features = ["testing-utils"] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle", features = ['testing-utils'] }
reward-distribution = { path = "../reward-distribution" }


# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
    "hex/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "fee/std",
    "nomination/std",
    "oracle/std",
    "security/std",
    "stellar-relay/std",
    "vault-registry/std",
    "primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-traits",
    "orml-currencies",
    "stellar-relay/testing-utils",
    "currency/runtime-benchmarks",
    "currency/testing-constants",
    "security/testing-utils",
    "oracle/testing-utils"
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "currency/try-runtime",
    "fee/try-runtime",
    "nomination/try-runtime",
    "oracle/try-runtime",
    "security/try-runtime",
    "stellar-relay/try-runtime",
    "vault-registry/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
]
