[package]
name = "reward-distribution"
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
version = "1.0.13"
edition = "2021"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Substrate dependencies
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true , optional = true }

#orml dependencies
orml-tokens = { workspace = true }
orml-traits =  { workspace = true }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }
security = { path = "../security", default-features = false }
currency = { path = "../currency", default-features = false }
pooled-rewards = { path = "../pooled-rewards", default-features = false }
oracle = { path = "../oracle", default-features = false }
staking = {path = "../staking", default-features = false}

[dev-dependencies]
currency = { path = "../currency", features = ["testing-constants", "testing-utils"] }
pallet-balances = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
orml-currencies = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "pooled-rewards/std",
    "oracle/std",
    "primitives/std",
    "orml-tokens/std",
    "orml-traits/std",
    "security/std",
    "staking/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "currency/runtime-benchmarks"
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "currency/try-runtime",
    "pooled-rewards/try-runtime",
    "oracle/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
    "security/try-runtime",
    "staking/try-runtime",
]
