[package]
name = "reward-distribution"
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
version = "1.0.17"
edition = "2021"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Substrate dependencies
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true , optional = true }

#orml dependencies
orml-tokens = { workspace = true }
orml-traits =  { workspace = true }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }
security = { path = "../security", default-features = false }
currency = { path = "../currency", default-features = false }
pooled-rewards = { path = "../pooled-rewards", default-features = false }
oracle = { path = "../oracle", default-features = false }
staking = {path = "../staking", default-features = false}

[dev-dependencies]
mocktopus.workspace = true
currency = { path = "../currency", features = ["testing-constants", "testing-utils"] }
pallet-balances = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
orml-currencies = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"currency/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"oracle/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pooled-rewards/std",
	"primitives/std",
	"scale-info/std",
	"security/std",
	"sp-arithmetic/std",
	"sp-std/std",
	"staking/std",
]
runtime-benchmarks = [
	"currency/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"oracle/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pooled-rewards/runtime-benchmarks",
	"staking/runtime-benchmarks",
]

try-runtime = [
	"currency/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"oracle/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pooled-rewards/try-runtime",
	"security/try-runtime",
	"staking/try-runtime",
]
