[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Reward module"
edition = "2021"
name = "reward"
version = "1.0.13"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Parachain dependencies
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Substrate dependencies
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[dev-dependencies]
mocktopus.workspace = true
rand = "0.8.3"
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

currency = { path = "../currency", features = ["testing-constants"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "currency/std",
    "primitives/std",
    "sp-arithmetic/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

try-runtime = [
     "frame-support/try-runtime",
    "frame-system/try-runtime",
]
