[package]
authors = ["Pendulum Chain"]
edition = "2021"
name = "security"
version = "1.0.17"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"]}
scale-info = { workspace = true, features = ["derive"]}
serde = { workspace = true, features = ["derive"]}
sha2 = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
mocktopus.workspace = true
sp-io = { workspace = true, default-features = true }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde/std",
	"sha2/std",
	"sp-core/std",
	"sp-std/std",
]
testing-utils = []

try-runtime = [ "frame-support/try-runtime", "frame-system/try-runtime" ]
