[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Spacewalk bridge pallet"
edition = "2021"
homepage = "https://pendulumchain.org/"
license = "Unlicense"
name = "pallet-spacewalk"
publish = false
repository = "https://github.com/pendulum-chain/spacewalk"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
]}
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}

# ORML dependencies - commit aac79b3b31953381669a2ffa9b3e9bfe48e87f38 is where polkadot-v0.9.17 dependencies are used (branch does not exist for it)
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "aac79b3b31953381669a2ffa9b3e9bfe48e87f38"}

# We'll want to remove this dependency so as to fully separate the bridge and stellar portions
substrate-stellar-sdk = {default-features = false, git = "https://github.com/pendulum-chain/substrate-stellar-sdk.git", features = ['offchain'], branch = "polkadot-v0.9.17" }

[dev-dependencies]
sp-core = {default-features = false, version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
sp-io = {default-features = false, version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
sp-runtime = {default-features = false, version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
