[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Staking module"
edition = "2021"
name = "staking"
version = "1.0.13"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

# Parachain dependencies
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Substrate dependencies
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

# note: can be remove after removal of migration
orml-tokens = { workspace = true }
orml-traits = { workspace = true }

[dev-dependencies]
rand.workspace = true
frame-benchmarking = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

currency = { path = "../currency", features = ["testing-constants"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "primitives/std",
    "currency/std",
    "sp-arithmetic/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "orml-traits/std",
    "orml-tokens/std",
    "primitives/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
