[package]
name = "stellar-relay"
version = "1.0.13"
description = "Spacewalk pallet for handling relayer functions"
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
homepage = "https://pendulumchain.org/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/pendulum-chain/spacewalk"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { workspace = true, features = ['alloc'] }
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"]}
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-std = { workspace = true }
sp-core =  { workspace = true }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
# Orml dependencies
orml-tokens = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true}

# For testing
rand.workspace = true

[features]
default = ["std"]
std = [
    "base64/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "primitives/std",
    "frame-benchmarking/std"
]
testing-utils = []

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
