[package]
name = "stellar-relay"
version = "1.0.14"
description = "Spacewalk pallet for handling relayer functions"
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
homepage = "https://pendulumchain.org/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/pendulum-chain/spacewalk"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { version = '0.13.0', default-features = false, features = ['alloc'] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.14", default-features = false }
serde = {version = "1.0.130", default-features = false, features = ["derive"]}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0", optional = true }

sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }

# For testing
rand = "0.8.5"

[features]
default = ["std"]
std = [
    "base64/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "primitives/std",
    "frame-benchmarking/std"
]
testing-utils = []

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
